# Imzadi

./: .gitignore  .gitmodules  CMakeLists.txt  Certificate.pfx  Converter.cap  LICENSE  README.md  TODO.txt
Engine/: CMakeLists.txt
Engine/Assets/Fonts/: Roboto_Regular.font  Roboto_Regular.texture  Roboto_Regular.texture_data  UbuntuMono_R.font  UbuntuMono_R.texture  UbuntuMono_R.texture_data
Engine/Assets/Levels/: Level1_A.mov_plat
Engine/Assets/Shaders/: DebugLine.constants_buffer  DebugLine.hlsl  DebugLine.shader  LegibleText.hlsl  LegibleText.shader  SkyDome.hlsl  SkyDome.shader  Standard.constants_buffer  Standard.hlsl  Standard.shader  StandardShadow.constants_buffer  StandardShadow.shader  Text.constants_buffer  Text.hlsl  Text.shader
Engine/Scripts/: BuildAssets.py  BuildInstaller.py  BuildShaders.py  Utils.py
Engine/Source/: Action.cpp  Action.h  AssetCache.cpp  AssetCache.h  Camera.cpp  Camera.h  Clock.cpp  Clock.h  Command.cpp  Command.h  Controller.cpp  Controller.h  Defines.h  Entity.cpp  Entity.h  Error.cpp  Error.h  EventSystem.cpp  EventSystem.h  Game.cpp  Game.h  Log.cpp  Log.h  Profile.cpp  Profile.h  Reference.cpp  Reference.h  Scene.cpp  Scene.h  StateCache.cpp  StateCache.h
Engine/Source/Assets/: Animation.cpp  Animation.h  Audio.cpp  Audio.h  Buffer.cpp  Buffer.h  CollisionShapeSet.cpp  CollisionShapeSet.h  ConstantsBuffer.cpp  ConstantsBuffer.h  CubeTexture.cpp  CubeTexture.h  Font.cpp  Font.h  LevelData.cpp  LevelData.h  MovingPlatformData.cpp  MovingPlatformData.h  NavGraph.cpp  NavGraph.h  RenderMesh.cpp  RenderMesh.h  Shader.cpp  Shader.h  Skeleton.cpp  Skeleton.h  SkinWeights.cpp  SkinWeights.h  SkinnedRenderMesh.cpp  SkinnedRenderMesh.h  SkyDome.cpp  SkyDome.h  Texture.cpp  Texture.h  TriggerBoxData.cpp  TriggerBoxData.h  WarpTunnelData.cpp  WarpTunnelData.h
Engine/Source/Audio/: System.cpp  System.h
Engine/Source/Collision/: BoundingBoxTree.cpp  BoundingBoxTree.h  CollisionCache.cpp  CollisionCache.h  CollisionCalculator.cpp  CollisionCalculator.h  Command.cpp  Command.h  Error.h  Loader.cpp  Loader.h  Query.cpp  Query.h  Result.cpp  Result.h  Shape.cpp  Shape.h  System.cpp  System.h  Task.cpp  Task.h  Thread.cpp  Thread.h
Engine/Source/Commands/: CollisionSystemCommand.cpp  CollisionSystemCommand.h  InfoCommand.cpp  InfoCommand.h
Engine/Source/Controller/: CMakeLists.txt  Controller.cpp
Engine/Source/Entities/: Biped.cpp  Biped.h  Enemy.cpp  Enemy.h  FollowCam.cpp  FollowCam.h  FreeCam.cpp  FreeCam.h  Hero.cpp  Hero.h  Level.cpp  Level.h  MovingPlatform.cpp  MovingPlatform.h  PhysicsEntity.cpp  PhysicsEntity.h  TriggerBox.cpp  TriggerBox.h  WarpTunnel.cpp  WarpTunnel.h
Engine/Source/Input/: DInput.cpp  DInput.h  Input.cpp  Input.h  PCInput.cpp  PCInput.h  System.cpp  System.h  XInput.cpp  XInput.h
Engine/Source/Math/: Angle.cpp  Angle.h  AnimTransform.cpp  AnimTransform.h  AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  Frustum.cpp  Frustum.h  Function.cpp  Function.h  Graph.cpp  Graph.h  Interval.cpp  Interval.h  LineSegment.cpp  LineSegment.h  Matrix2x2.cpp  Matrix2x2.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  PlanarGraph.cpp  PlanarGraph.h  Plane.cpp  Plane.h  Polygon.cpp  Polygon.h  PolygonMesh.cpp  PolygonMesh.h  Quadratic.cpp  Quadratic.h  Quaternion.cpp  Quaternion.h  Random.cpp  Random.h  Ray.cpp  Ray.h  SphericalCoords.cpp  SphericalCoords.h  (+8 more)
Engine/Source/Particles/: System.cpp  System.h
Engine/Source/Physics/: System.cpp  System.h
Engine/Source/RenderObjects/: AnimatedMeshInstance.cpp  AnimatedMeshInstance.h  CollisionStatsRenderObject.cpp  CollisionStatsRenderObject.h  ConsoleRenderObject.cpp  ConsoleRenderObject.h  DebugLines.cpp  DebugLines.h  RenderMeshInstance.cpp  RenderMeshInstance.h  SkyDomeRenderObject.cpp  SkyDomeRenderObject.h  TextRenderObject.cpp  TextRenderObject.h
Games/BenzoBonanza/: CMakeLists.txt
Games/BenzoBonanza/Assets/: .gitignore
Games/BenzoBonanza/Source/: Abilities.cpp  Abilities.h  Character.cpp  Character.h  CustomAssetCache.h  DialogSystem.cpp  GameApp.cpp  GameApp.h  GameLevel.cpp  Pickup.h
Games/SearchForTheSacredChaliceOfRixx/: CMakeLists.txt
Games/SearchForTheSacredChaliceOfRixx/Source/: Character.cpp  Character.h  CustomAssetCache.cpp  DialogSystem.cpp  DialogSystem.h  GameApp.cpp  GameApp.h  GameLevel.cpp  GameLevel.h  Main.cpp  Pickup.cpp  Pickup.h
MegaSuperUltraQuest/: CMakeLists.txt
MegaSuperUltraQuest/Assets/: .gitignore  BuildAssets.py
MegaSuperUltraQuest/Assets/Levels/: Level1.level
MegaSuperUltraQuest/Assets/RenderMeshes/: Box.render_mesh  Triangle.render_mesh
MegaSuperUltraQuest/Assets/Shaders/: DebugLine.hlsl  DebugLine.shader  Standard.hlsl  Standard.shader  StandardShadow.hlsl  StandardShadow.shader
MegaSuperUltraQuest/Source/: AssetCache.cpp  AssetCache.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Enemy.h  Entity.cpp  Entity.h  FreeCam.cpp  FreeCam.h  Game.cpp  Game.h  Hero.cpp  Hero.h  Level.cpp  Level.h  Main.cpp  Reference.cpp  Reference.h  RenderMesh.cpp  RenderMesh.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Spectator.cpp  Spectator.h  Texture.cpp  Texture.h
MegaSuperUltraQuest/Source/Assets/: Animation.cpp  Animation.h  Buffer.cpp  Buffer.h  CollisionShapeSet.cpp  CollisionShapeSet.h  LevelData.cpp  LevelData.h  MovingPlatformData.cpp  MovingPlatformData.h  RenderMesh.cpp  RenderMesh.h  Shader.cpp  Skeleton.cpp  Skeleton.h  SkinWeights.cpp  SkinWeights.h  SkinnedRenderMesh.cpp  SkinnedRenderMesh.h  Texture.cpp  Texture.h
MegaSuperUltraQuest/Source/Entities/: Enemy.cpp  Enemy.h  FollowCam.cpp  FollowCam.h  FreeCam.cpp  FreeCam.h  Hero.cpp  Hero.h  Level.cpp  Level.h  MovingPlatform.cpp  MovingPlatform.h  PhysicsEntity.cpp
MegaSuperUltraQuest/Source/RenderObjects/: AnimatedMeshInstance.cpp  AnimatedMeshInstance.h  DebugLines.h  (+3 more)
Sandbox/: CMakeLists.txt
Sandbox/Data/: Platforms.max
Sandbox/Source/: App.cpp  App.h  Camera.cpp  Canvas.cpp  Canvas.h  Controller.cpp  Controller.h  Frame.cpp  Frame.h
Tools/AssetConverter/: CMakeLists.txt
Tools/CollisionSandbox/: CMakeLists.txt
Tools/Editor/: CMakeLists.txt
(+1289 files in other folders)
