# CMakeLists.txt for GameEngine library.

set(GAME_ENGINE_SOURCES
    Source/Defines.h
    Source/AssetCache.cpp
    Source/AssetCache.h
    Source/Camera.cpp
    Source/Camera.h
    Source/Entity.cpp
    Source/Entity.h
    Source/Game.cpp
    Source/Game.h
    Source/Reference.cpp
    Source/Reference.h
    Source/Scene.cpp
    Source/Scene.h
    Source/Log.cpp
    Source/Log.h
    Source/Action.cpp
    Source/Action.h
    Source/EventSystem.cpp
    Source/EventSystem.h
    Source/StateCache.cpp
    Source/StateCache.h
    Source/Profile.cpp
    Source/Profile.h
    Source/Clock.cpp
    Source/Clock.h
    Source/Command.cpp
    Source/Command.h
    Source/Input/Input.cpp
    Source/Input/Input.h
    Source/Input/DInput.cpp
    Source/Input/DInput.h
    Source/Input/PCInput.cpp
    Source/Input/PCInput.h
    Source/Input/XInput.cpp
    Source/Input/XInput.h
    Source/Input/System.cpp
    Source/Input/System.h
    Source/Entities/FollowCam.cpp
    Source/Entities/FollowCam.h
    Source/Entities/FreeCam.cpp
    Source/Entities/FreeCam.h
    Source/Entities/Biped.cpp
    Source/Entities/Biped.h
    Source/Entities/Level.cpp
    Source/Entities/Level.h
    Source/Entities/MovingPlatform.cpp
    Source/Entities/MovingPlatform.h
    Source/Entities/WarpTunnel.cpp
    Source/Entities/WarpTunnel.h
    Source/Entities/TriggerBox.cpp
    Source/Entities/TriggerBox.h
    Source/Collision/System.cpp
    Source/Collision/System.h
    Source/Collision/Thread.cpp
    Source/Collision/Thread.h
    Source/Collision/Task.cpp
    Source/Collision/Task.h
    Source/Collision/Query.cpp
    Source/Collision/Query.h
    Source/Collision/Command.cpp
    Source/Collision/Command.h
    Source/Collision/Loader.cpp
    Source/Collision/Loader.h
    Source/Collision/CollisionCache.cpp
    Source/Collision/CollisionCache.h
    Source/Collision/CollisionCalculator.cpp
    Source/Collision/CollisionCalculator.h
    Source/Collision/Shape.cpp
    Source/Collision/Shape.h
    Source/Collision/Result.cpp
    Source/Collision/Result.h
    Source/Collision/BoundingBoxTree.cpp
    Source/Collision/BoundingBoxTree.h
    Source/Collision/Shapes/Box.cpp
    Source/Collision/Shapes/Box.h
    Source/Collision/Shapes/Capsule.cpp
    Source/Collision/Shapes/Capsule.h
    Source/Collision/Shapes/Polygon.cpp
    Source/Collision/Shapes/Polygon.h
    Source/Collision/Shapes/Sphere.cpp
    Source/Collision/Shapes/Sphere.h
    Source/Commands/CollisionSystemCommand.cpp
    Source/Commands/CollisionSystemCommand.h
    Source/Commands/InfoCommand.cpp
    Source/Commands/InfoCommand.h
    Source/Physics/System.cpp
    Source/Physics/System.h
    Source/Audio/System.cpp
    Source/Audio/System.h
    Source/Particles/System.cpp
    Source/Particles/System.h
    Source/Math/AnimTransform.cpp
    Source/Math/AnimTransform.h
    Source/Math/AxisAlignedBoundingBox.cpp
    Source/Math/AxisAlignedBoundingBox.h
    Source/Math/Frustum.cpp
    Source/Math/Frustum.h
    Source/Math/Matrix4x4.cpp
    Source/Math/Matrix4x4.h
    Source/Math/Matrix3x3.cpp
    Source/Math/Matrix3x3.h
    Source/Math/Matrix2x2.cpp
    Source/Math/Matrix2x2.h
    Source/Math/Transform.cpp
    Source/Math/Transform.h
    Source/Math/Vector4.cpp
    Source/Math/Vector4.h
    Source/Math/Vector3.cpp
    Source/Math/Vector3.h
    Source/Math/Vector2.cpp
    Source/Math/Vector2.h
    Source/Math/Ray.cpp
    Source/Math/Ray.h
    Source/Math/Plane.cpp
    Source/Math/Plane.h
    Source/Math/LineSegment.cpp
    Source/Math/LineSegment.h
    Source/Math/Quaternion.cpp
    Source/Math/Quaternion.h
    Source/Math/Function.cpp
    Source/Math/Function.h
    Source/Math/Interval.cpp
    Source/Math/Interval.h
    Source/Math/SphericalCoords.cpp
    Source/Math/SphericalCoords.h
    Source/Math/Angle.cpp
    Source/Math/Angle.h
    Source/Math/Polygon.cpp
    Source/Math/Polygon.h
    Source/Math/PolygonMesh.cpp
    Source/Math/PolygonMesh.h
    Source/Math/Graph.cpp
    Source/Math/Graph.h
    Source/Math/Random.cpp
    Source/Math/Random.h
    Source/RenderObjects/AnimatedMeshInstance.cpp
    Source/RenderObjects/AnimatedMeshInstance.h
    Source/RenderObjects/DebugLines.cpp
    Source/RenderObjects/DebugLines.h
    Source/RenderObjects/RenderMeshInstance.cpp
    Source/RenderObjects/RenderMeshInstance.h
    Source/RenderObjects/TextRenderObject.cpp
    Source/RenderObjects/TextRenderObject.h
    Source/RenderObjects/CollisionStatsRenderObject.cpp
    Source/RenderObjects/CollisionStatsRenderObject.h
    Source/RenderObjects/SkyDomeRenderObject.cpp
    Source/RenderObjects/SkyDomeRenderObject.h
    Source/RenderObjects/ConsoleRenderObject.cpp
    Source/RenderObjects/ConsoleRenderObject.h
    Source/Assets/Animation.cpp
    Source/Assets/Animation.h
    Source/Assets/Buffer.cpp
    Source/Assets/Buffer.h
    Source/Assets/CollisionShapeSet.cpp
    Source/Assets/CollisionShapeSet.h
    Source/Assets/LevelData.cpp
    Source/Assets/LevelData.h
    Source/Assets/MovingPlatformData.cpp
    Source/Assets/MovingPlatformData.h
    Source/Assets/WarpTunnelData.cpp
    Source/Assets/WarpTunnelData.h
    Source/Assets/RenderMesh.cpp
    Source/Assets/RenderMesh.h
    Source/Assets/Shader.cpp
    Source/Assets/Shader.h
    Source/Assets/Skeleton.cpp
    Source/Assets/Skeleton.h
    Source/Assets/SkinnedRenderMesh.cpp
    Source/Assets/SkinnedRenderMesh.h
    Source/Assets/SkinWeights.cpp
    Source/Assets/SkinWeights.h
    Source/Assets/Texture.cpp
    Source/Assets/Texture.h
    Source/Assets/Font.cpp
    Source/Assets/Font.h
    Source/Assets/CubeTexture.cpp
    Source/Assets/CubeTexture.h
    Source/Assets/SkyDome.cpp
    Source/Assets/SkyDome.h
    Source/Assets/TriggerBoxData.cpp
    Source/Assets/TriggerBoxData.h
    Source/Assets/Audio.cpp
    Source/Assets/Audio.h
)
    
source_group("Source" TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${GAME_ENGINE_SOURCES})

add_library(ImzadiGameEngine SHARED
    ${GAME_ENGINE_SOURCES}
)

target_link_libraries(ImzadiGameEngine PUBLIC
    AudioDataLib
    RtMidi
)

target_compile_definitions(ImzadiGameEngine PRIVATE
    IMZADI_EXPORT
    _USE_MATH_DEFINES
    WIN32_LEAN_AND_MEAN
    NOMINMAX
    IMZADI_COLLISION_PROFILING_ENABLED
)

target_link_libraries(ImzadiGameEngine PRIVATE
    d3d11.lib
    d3dcompiler.lib    
    Xinput9_1_0.lib
    cabinet.lib
    Xaudio2.lib
)

target_include_directories(ImzadiGameEngine PUBLIC
    "Source"
    ${PROJECT_SOURCE_DIR}/ThirdParty
)

if(CMAKE_BUILD_TYPE MATCHES Debug)
    target_compile_definitions(ImzadiGameEngine PUBLIC
        IMZADI_LOGGING
    )
endif()